refactored payment service
